Normalize block lists & improve console output